RESOLVED FIXED291614
REGRESSION(289593@main): Images are still restricted even after opting out pages from Lockdown Mode
https://bugs.webkit.org/show_bug.cgi?id=291614
Summary REGRESSION(289593@main): Images are still restricted even after opting out pa...
Said Abou-Hallawa
Reported 2025-04-15 21:11:48 PDT
1. Enable the system lockdown mode from “Settings/Privacy & Security/Lockdown Mode” and select “Turn On” 2. Restart the machine 3. Launch Safari 4. Open https://ccameron-chromium.github.io/hdr-jpeg/index.html. Notice all the AVIF images are displayed as broken images. This is expected. 5. Opt this page out from lockdown mode from “Safari/Settings/Websites/Lockdown Mode” and select “Off” Result: The AVIF images are still displayed as broken images Expected: The AVIF images are recognized as allowed image types and displayed normally.
Attachments
Said Abou-Hallawa
Comment 1 2025-04-15 21:12:26 PDT
Said Abou-Hallawa
Comment 2 2025-04-16 10:45:35 PDT
Pull request: https://github.com/WebKit/WebKit/pull/44139 Committed 293755@main (69431ee): https://commits.webkit.org/293755@main Reviewed commits have been landed. Closing PR #44139 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.