REGRESSION(289593@main): Images are still restricted even after opting out pages from Lockdown Mode https://bugs.webkit.org/show_bug.cgi?id=291614# rdar://147500578

Reviewed by Tim Horton.

In 289593@main we made UTIRegistry call PAL::isLockdownModeEnabled() to detect
whether the Lockdown Mode is enabled. But this function ends up calling the system
LockdownModeLibrary. This does not take into consideration the opted out pages.
So this causes the restricted images to be always restricted in Lockdown Mode.

The fix is to used WebProcess::isLockdownModeEnabled() instead because this will
return false when opting out the page. To propagate this to WebCore a getter and
a setter for isLockdownModeEnabledForCurrentProcess will be added in PAL.

UTIRegistry will call PAL::isLockdownModeEnabledForCurrentProcess() instead.

* Source/WebCore/PAL/PAL.xcodeproj/project.pbxproj:
* Source/WebCore/PAL/pal/cocoa/LockdownModeCocoa.h: Renamed from Source/WebCore/PAL/pal/cocoa/LockdownModeSoftLink.h.
* Source/WebCore/PAL/pal/cocoa/LockdownModeCocoa.mm: Renamed from Source/WebCore/PAL/pal/cocoa/LockdownModeSoftLink.mm.
(PAL::isLockdownModeEnabled):
(PAL::isLockdownModeEnabledForCurrentProcessCached):
(PAL::isLockdownModeEnabledForCurrentProcess):
(PAL::setLockdownModeEnabledForCurrentProcess):
* Source/WebCore/platform/graphics/cg/UTIRegistry.mm:
(WebCore::supportedImageTypes):
(WebCore::setAdditionalSupportedImageTypes):
(WebCore::allowableSupportedImageTypes):
(WebCore::isLockdownModeEnabled): Deleted.
* Source/WebKit/UIProcess/API/Cocoa/_WKSystemPreferences.mm:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):

Canonical link: https://commits.webkit.org/293755@main