Source/WebCore/PAL/pal/cocoa/LockdownModeCocoa.h
@@ -29,7 +29,9 @@
 
 namespace PAL {
 
-PAL_EXPORT BOOL isLockdownModeEnabled();
+PAL_EXPORT bool isLockdownModeEnabled();
+PAL_EXPORT bool isLockdownModeEnabledForCurrentProcess();
+PAL_EXPORT void setLockdownModeEnabledForCurrentProcess(bool);
 
 }
 
